# ugb

./: .env.example  Cargo.toml
.github/workflows/: ci.yml  update-ipdeny.yml
db/: geo.dhall  geo.json  geo.meta.json  schema.dhall
scripts/: build_geo_json.py
src/: cli.rs  db.rs  ipdeny.rs  ipset.rs  main.rs  repo.rs  state.rs  systemd.rs  ufw.rs
